--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "test:watch": "vitest watch",
+    "test:ci": "vitest --coverage"
+  },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@trivago/prettier-plugin-sort-imports": "4.1.0",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "@vitest/coverage-v8": "^0.34.2",
     "eslint": "^8.47.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "typescript": "^5.1.6",
+    "prettier": "^3.0.2",
+    "typescript": "^5.2.2",
     "vitest": "^0.34.2"
   },
   "packageManager": "pnpm@8.6.2"
