--- a/packages/eslint-plugin-resulto/tsconfig.json
+++ b/packages/eslint-plugin-resulto/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "include": ["**/*.ts"],
-  "exclude": ["node_modules/**/*"]
+  "exclude": ["node_modules/**/*"],
+  "compilerOptions": {
+    "types": ["vitest/globals"]
+  }
 }
