--- a/packages/eslint-plugin-resulto/package.json
+++ b/packages/eslint-plugin-resulto/package.json
@@ -4,27 +4,29 @@
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
-  "types": "./dist/index.d.cts",
   "exports": {
     "require": {
-      "types": "./dist/index.d.cts",
       "default": "./dist/index.cjs"
     },
     "import": {
-      "types": "./dist/index.d.mts",
       "default": "./dist/index.mjs"
     }
   },
   "scripts": {
     "ts-check": "tsc --noEmit",
     "test:watch": "vitest watch",
-    "build": "pkgroll"
+    "build": "pkgroll",
+    "prepare": "pnpm build"
   },
   "peerDependencies": {
-    "eslint": ">=5.16.0"
+    "@typescript-eslint/parser": "*"
   },
   "devDependencies": {
-    "@types/eslint": "^8.44.2",
+    "@typescript-eslint/parser": "^6.4.0",
+    "@typescript-eslint/rule-tester": "^6.5.0",
     "pkgroll": "^1.11.0"
+  },
+  "dependencies": {
+    "@typescript-eslint/utils": "^6.5.0"
   }
 }
