--- a/packages/example/.yalc/eslint-plugin-resulto/package.json
+++ b/packages/example/.yalc/eslint-plugin-resulto/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "resulto",
+  "name": "eslint-plugin-resulto",
   "version": "0.0.1",
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
-  "types": "./dist/index.d.cts",
   "exports": {
     "require": {
-      "types": "./dist/index.d.cts",
       "default": "./dist/index.cjs"
     },
     "import": {
-      "types": "./dist/index.d.mts",
       "default": "./dist/index.mjs"
     }
   },
   "scripts": {
     "ts-check": "tsc --noEmit",
     "test:watch": "vitest watch",
-    "build": "pkgroll",
-    "prepare": "pnpm build"
+    "build": "pkgroll"
   },
-  "devDependencies": {
-    "pkgroll": "^1.11.0"
-  }
+  "peerDependencies": {
+    "@typescript-eslint/parser": "*"
+  },
+  "dependencies": {
+    "@typescript-eslint/utils": "^6.5.0"
+  },
+  "yalcSig": "563c754a735628b44251595b57457594"
 }
