--- a/packages/eslint-plugin-resulto/package.json
+++ b/packages/eslint-plugin-resulto/package.json
@@ -20,8 +20,7 @@
     "update:eslint-docs": "eslint-doc-generator"
   },
   "peerDependencies": {
-    "@typescript-eslint/parser": "*",
-    "typescript": "*"
+    "@typescript-eslint/parser": "6.x"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^6.4.0",
