--- a/packages/eslint-plugin-resulto/package.json
+++ b/packages/eslint-plugin-resulto/package.json
@@ -1,6 +1,14 @@
 {
   "name": "eslint-plugin-resulto",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "description": "ESLint plugin for resulto",
+  "scripts": {
+    "ts-check": "tsc --noEmit",
+    "test:watch": "vitest watch",
+    "build": "pkgroll",
+    "prepare": "pnpm build",
+    "update:eslint-docs": "eslint-doc-generator"
+  },
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -12,13 +20,20 @@
       "default": "./dist/index.mjs"
     }
   },
-  "scripts": {
-    "ts-check": "tsc --noEmit",
-    "test:watch": "vitest watch",
-    "build": "pkgroll",
-    "prepare": "pnpm build",
-    "update:eslint-docs": "eslint-doc-generator"
+  "author": "adjsky",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/adjsky/resulto.git"
   },
+  "keywords": [
+    "result",
+    "rust",
+    "eslint",
+    "plugin"
+  ],
+  "files": [
+    "dist"
+  ],
   "peerDependencies": {
     "@typescript-eslint/parser": "6.x"
   },
