--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.2",
     "turbo": "^1.10.13",
+    "typedoc": "^0.25.0",
+    "typedoc-plugin-markdown": "^3.16.0",
     "typescript": "^5.2.2",
     "vitest": "^0.34.2"
   },
