Make `Result` a union type, bump v0.3.0

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ts-check": "turbo ts-check",
     "test:watch": "vitest watch",
-    "test:ci": "vitest --coverage",
+    "test:ci": "vitest --coverage --run",
     "generate-docs": "typedoc --out docs packages/resulto/src/index.ts"
   },
   "devDependencies": {
