--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "generate-docs": "typedoc --out docs packages/resulto/src/index.ts"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.1",
+    "@eslint/js": "^9.10.0",
     "@trivago/prettier-plugin-sort-imports": "4.1.0",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
     "@vitest/coverage-v8": "^0.34.2",
-    "eslint": "^8.47.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.9.0",
     "prettier": "^3.0.2",
     "turbo": "^1.10.13",
     "typedoc": "^0.25.0",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.5.0",
     "vitest": "^0.34.2"
   },
   "packageManager": "pnpm@8.6.2"
