--- a/eslint-plugin/deno.json
+++ b/eslint-plugin/deno.json
@@ -5,6 +5,7 @@
     ".": "./mod.ts"
   },
   "imports": {
+    "@typescript-eslint/parser": "npm:@typescript-eslint/parser@^8.12.2",
     "@typescript-eslint/rule-tester": "npm:@typescript-eslint/rule-tester@^8.12.2",
     "@typescript-eslint/utils": "npm:@typescript-eslint/utils@^8.12.2",
     "typescript": "npm:typescript@^5.6.3"
