--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,7 @@
 		"test": "deno test --allow-read --allow-env --allow-sys"
 	},
 	"imports": {
+		"@david/dax": "jsr:@david/dax@^0.42.0",
 		"@deno/dnt": "jsr:@deno/dnt@^0.41.3",
 		"@std/assert": "jsr:@std/assert@^1.0.6",
 		"@std/testing": "jsr:@std/testing@^1.0.3"
