--- a/.github/workflows/bump-workspace.yml
+++ b/.github/workflows/bump-workspace.yml
@@ -23,3 +23,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIT_USER_NAME: adjsky
           GIT_USER_EMAIL: igorlfmartins@mail.ru
+
+      - run: deno fmt
+      - uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: format changes
