--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,8 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: "20.x"
+          node-version: 20.x
+          registry-url: https://registry.npmjs.org
 
       - name: Publish to JSR
         run: deno publish
